[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "problem_solving_multi_lang"
version = "0.1.0"
requires-python = "==3.11.*"
description = "A repository for practicing algorithm and problem-solving with Python and Java."
dependencies = []


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.tasks]

[tool.pixi.dependencies]